--- a/portfolio.html
+++ b/portfolio.html
@@ -19,28 +19,30 @@
   </head>
   <body>
     <header>
-      <a class="logo" href="./index.html"><span class="logo-cover">Web</span>Studio</a>
-      <nav>
+      <div class="container">
+        <a class="logo" href="./index.html"><span class="logo-cover">Web</span>Studio</a>
+        <nav>
+          <ul class="list">
+            <li>
+              <a class="link navigation-link this-page" href="./index.html">Студія</a>
+            </li>
+            <li>
+              <a class="link navigation-link" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li>
+              <a class="link navigation-link" href="#">Контакти</a>
+            </li>
+          </ul>
+        </nav>
         <ul class="list">
           <li>
-            <a class="link navigation-link" href="./index.html">Студія</a>
+            <a class="link top-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a class="link navigation-link this-page" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li>
-            <a class="link navigation-link" href="#">Контакти</a>
+            <a class="link top-contact" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-      <ul class="list">
-        <li>
-          <a class="link top-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="link top-contact" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <section product-section>
@@ -150,12 +152,16 @@
       </section>
     </main>
     <footer class="bottom-section">
-      <a class="logo bottom-logo" href="./index.html"><span class="logo-cover">Web</span>Studio</a>
-      <address class="bottom-text">м. Київ, пр-т Лесі Українки, 26</address>
-      <address>
-        <a class="link bottom-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="link bottom-contact" href="tel:+380961111111">+38 096 111 11 11</a>
-      </address>
+      <div class="container">
+        <a class="logo bottom-logo" href="./index.html"
+          ><span class="logo-cover">Web</span>Studio</a
+        >
+        <address class="bottom-text">м. Київ, пр-т Лесі Українки, 26</address>
+        <address>
+          <a class="link bottom-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link bottom-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
