--- a/portfolio.html
+++ b/portfolio.html
@@ -46,109 +46,116 @@
     </header>
     <main>
       <section product-section>
-        <h1 class="visually-hidden">Портфоліо Web Studio</h1>
-        <ul class="list">
-          <li><button class="button" type="button">Усі</button></li>
-          <li><button class="button" type="button">Веб-сайти</button></li>
-          <li><button class="button" type="button">Додатки</button></li>
-          <li><button class="button" type="button">Дизайн</button></li>
-          <li><button class="button" type="button">Маркетинг</button></li>
-        </ul>
-        <ul class="list product-card">
-          <li>
-            <a class="product-link" href="">
-              <img
-                src="./images/8.jpg"
-                alt="Ноутбук на білому тлі, на екрані якого відкрита веб-сайт"
-                width="370"
-                height="294"
-              />
-              <h2 class="product-title">Технокряк</h2>
-              <span class="product-text">Веб-сайт</span>
-            </a>
-          </li>
-          <li>
-            <a class="product-link" href="">
-              <img
-                src="./images/9.jpg"
-                alt="Два хлопця грають у баскетбол"
-                width="370"
-                height="294"
-              />
-              <h2 class="product-title">Постер New Orlean vs Golden Star</h2>
-              <span class="product-text">Дизайн</span>
-            </a>
-          </li>
-          <li>
-            <a class="product-link" href="">
-              <img
-                src="./images/10.jpg"
-                alt="Напис The Seafood на задньому твір якої розташована риба"
-                width="370"
-                height="294"
-              />
-              <h2 class="product-title">Ресторан Seafood</h2>
-              <span class="product-text">Додаток</span>
-            </a>
-          </li>
-          <li>
-            <a class="product-link" href="">
-              <img
-                src="./images/11.jpg"
-                alt="Бездротові навушники на білому тлі"
-                width="370"
-                height="294"
-              />
-              <h2 class="product-title">Проєкт Prime</h2>
-              <span class="product-text">Маркетинг</span>
-            </a>
-          </li>
-          <li>
-            <a class="product-link" href="">
-              <img src="./images/12.jpg" alt="Напис Lab el tag" width="370" height="294" />
-              <h2 class="product-title">Проєкт Boxes</h2>
-              <span class="product-text">Додаток</span>
-            </a>
-          </li>
-          <li>
-            <a class="product-link" href="">
-              <img src="./images/13.jpg" alt="Дві коробки на білому тлі" width="370" height="294" />
-              <h2 class="product-title">Inspiration has no Borders</h2>
-              <span class="product-text">Веб-сайт</span>
-            </a>
-          </li>
-          <li>
-            <a class="product-link" href="">
-              <img
-                src="./images/14.jpg"
-                alt="Комп'ютер із відкритим додатком"
-                width="370"
-                height="294"
-              />
-              <h2 class="product-title">Видання Limited Edition</h2>
-              <span class="product-text">Дизайн</span>
-            </a>
-          </li>
-          <li>
-            <a class="product-link" href="">
-              <img src="./images/15.jpg" alt="Книжка на білому тлі" width="370" height="294" />
-              <h2 class="product-title">Проєкт LAB</h2>
-              <span class="product-text">Маркетинг</span>
-            </a>
-          </li>
-          <li>
-            <a class="product-link" href="">
-              <img
-                src="./images/16.jpg"
-                alt="Робочий стіл на якому розташовані рюкзак, аркуші паперу та ноутбук, у якому відкрито веб-сторінку"
-                width="370"
-                height="294"
-              />
-              <h2 class="product-title">Growing Business</h2>
-              <span class="product-text">Додаток</span>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="visually-hidden">Портфоліо Web Studio</h1>
+          <ul class="list">
+            <li><button class="button" type="button">Усі</button></li>
+            <li><button class="button" type="button">Веб-сайти</button></li>
+            <li><button class="button" type="button">Додатки</button></li>
+            <li><button class="button" type="button">Дизайн</button></li>
+            <li><button class="button" type="button">Маркетинг</button></li>
+          </ul>
+          <ul class="list product-card">
+            <li>
+              <a class="product-link" href="">
+                <img
+                  src="./images/8.jpg"
+                  alt="Ноутбук на білому тлі, на екрані якого відкрита веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="product-title">Технокряк</h2>
+                <span class="product-text">Веб-сайт</span>
+              </a>
+            </li>
+            <li>
+              <a class="product-link" href="">
+                <img
+                  src="./images/9.jpg"
+                  alt="Два хлопця грають у баскетбол"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="product-title">Постер New Orlean vs Golden Star</h2>
+                <span class="product-text">Дизайн</span>
+              </a>
+            </li>
+            <li>
+              <a class="product-link" href="">
+                <img
+                  src="./images/10.jpg"
+                  alt="Напис The Seafood на задньому твір якої розташована риба"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="product-title">Ресторан Seafood</h2>
+                <span class="product-text">Додаток</span>
+              </a>
+            </li>
+            <li>
+              <a class="product-link" href="">
+                <img
+                  src="./images/11.jpg"
+                  alt="Бездротові навушники на білому тлі"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="product-title">Проєкт Prime</h2>
+                <span class="product-text">Маркетинг</span>
+              </a>
+            </li>
+            <li>
+              <a class="product-link" href="">
+                <img src="./images/12.jpg" alt="Напис Lab el tag" width="370" height="294" />
+                <h2 class="product-title">Проєкт Boxes</h2>
+                <span class="product-text">Додаток</span>
+              </a>
+            </li>
+            <li>
+              <a class="product-link" href="">
+                <img
+                  src="./images/13.jpg"
+                  alt="Дві коробки на білому тлі"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="product-title">Inspiration has no Borders</h2>
+                <span class="product-text">Веб-сайт</span>
+              </a>
+            </li>
+            <li>
+              <a class="product-link" href="">
+                <img
+                  src="./images/14.jpg"
+                  alt="Комп'ютер із відкритим додатком"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="product-title">Видання Limited Edition</h2>
+                <span class="product-text">Дизайн</span>
+              </a>
+            </li>
+            <li>
+              <a class="product-link" href="">
+                <img src="./images/15.jpg" alt="Книжка на білому тлі" width="370" height="294" />
+                <h2 class="product-title">Проєкт LAB</h2>
+                <span class="product-text">Маркетинг</span>
+              </a>
+            </li>
+            <li>
+              <a class="product-link" href="">
+                <img
+                  src="./images/16.jpg"
+                  alt="Робочий стіл на якому розташовані рюкзак, аркуші паперу та ноутбук, у якому відкрито веб-сторінку"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="product-title">Growing Business</h2>
+                <span class="product-text">Додаток</span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="bottom-section">
