--- a/portfolio.html
+++ b/portfolio.html
@@ -19,26 +19,26 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="container flex-header">
         <a class="logo" href="./index.html"><span class="logo-cover">Web</span>Studio</a>
         <nav>
-          <ul class="list">
-            <li>
+          <ul class="list list-nav">
+            <li class="item">
               <a class="link navigation-link this-page" href="./index.html">Студія</a>
             </li>
-            <li>
+            <li class="item">
               <a class="link navigation-link" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li>
+            <li class="item">
               <a class="link navigation-link" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="list">
-          <li>
+        <ul class="list list-contact">
+          <li class="item">
             <a class="link top-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="item">
             <a class="link top-contact" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
