--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-button" type="button">Замовити послугу</button>
+          <button class="hero-button" type="button"><span class="button-text">Замовити послугу<span></button>
         </div>
       </section>
       <section class="features-section">
