--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
       </div>
     </header>
     <main>
-      <section product-section>
+      <section class="product-section">
         <div class="container">
           <h1 class="visually-hidden">Портфоліо Web Studio</h1>
           <ul class="list">
