Дабовляет флексы в секцую features-section

--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
           <button class="hero-button" type="button"><span class="button-text">Замовити послугу<span></button>
         </div>
       </section>
-      <section class="features-section">
+      <section class="  ">
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
-          <ul class="list">
-            <li>
+          <ul class="list features-list">
+            <li class="item">
               <h3 class="features-title">Увага до деталей</h3>
               <p class="desc">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="features-title">Пунктуальність</h3>
               <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="features-title">Планування</h3>
               <p class="desc">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="features-title">Сучасні технології</h3>
               <p class="desc">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
