Дабовляет сетку в development-section

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
           <button class="hero-button" type="button"><span class="button-text">Замовити послугу<span></button>
         </div>
       </section>
-      <section class="  ">
+      <section class="features-section">
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
-          <ul class="list features-list">
+          <ul class="list list-features">
             <li class="item">
               <h3 class="features-title">Увага до деталей</h3>
               <p class="desc">
@@ -76,10 +76,10 @@
       </section>
       <section class="development-section">
         <div class="container">
-          <h2 class="title">Чим ми займаємося</h2>
-          <ul class="list">
-            <li><img src="./images/1.jpg" alt="розробка програми" width="370" height="294" /></li>
-            <li>
+          <h2 class="title developmen-title">Чим ми займаємося</h2>
+          <ul class="list list-developmen">
+            <li class="item"><img src="./images/1.jpg" alt="розробка програми" width="370" height="294" /></li>
+            <li class="item">
               <img
                 src="./images/2.jpg"
                 alt="розробка дизайну для мобільних програм"
@@ -87,7 +87,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="item">
               <img src="./images/3.jpg" alt="вибір кольору до дизайну" width="370" height="294" />
             </li>
           </ul>
@@ -97,7 +97,7 @@
         <div class="container">
           <h2 class="title">Наша команда</h2>
           <ul class="list">
-            <li>
+            <li class="item">
               <img
                 src="./images/4.jpg"
                 alt="чоловік у червоній сорочці на білому тлі"
@@ -107,7 +107,7 @@
               <h3 class="employee-title">Ігор Дем'яненко</h3>
               <span class="employee-text">Product Designer</span>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/5.jpg"
                 alt="женьшина в чорний жакет на білому тлі"
@@ -117,7 +117,7 @@
               <h3 class="employee-title">Ольга Рєпіна</h3>
               <span class="employee-text">Frontend Developer</span>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/6.jpg"
                 alt="чоловік у синій сорочці на білому тлі"
@@ -127,7 +127,7 @@
               <h3 class="employee-title">Микола Тарасов</h3>
               <span class="employee-text">Marketing</span>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/7.jpg"
                 alt="чоловік у чорній футболці на даху"
