--- a/portfolio.html
+++ b/portfolio.html
@@ -163,10 +163,18 @@
         <a class="logo bottom-logo" href="./index.html"
           ><span class="logo-cover">Web</span>Studio</a
         >
-        <address class="bottom-text">м. Київ, пр-т Лесі Українки, 26</address>
+        <address class="bottom-text">
+          <span class="bottom-span">м. Київ, пр-т Лесі Українки, 26</span>
+        </address>
         <address>
-          <a class="link bottom-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a class="link bottom-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+          <ul>
+            <span class="bottom-span"
+              ><a class="link bottom-contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              ></span
+            >
+            <a class="link bottom-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+          </ul>
         </address>
       </div>
     </footer>
