--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
       </section>
       <section class="employee-section">
         <div class="container">
-          <h2 class="title">Наша команда</h2>
-          <ul class="list">
+          <h2 class="title employee-title">Наша команда</h2>
+          <ul class="list list-employee">
             <li class="item">
               <img
                 src="./images/4.jpg"
@@ -104,8 +104,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="employee-title">Ігор Дем'яненко</h3>
-              <span class="employee-text">Product Designer</span>
+              <div class="card-text">
+                <h3 class="employee-card-title">Ігор Дем'яненко</h3>
+                <span class="employee-card-text">Product Designer</span>
+            </div>
             </li>
             <li class="item">
               <img
@@ -114,8 +116,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="employee-title">Ольга Рєпіна</h3>
-              <span class="employee-text">Frontend Developer</span>
+              <div class="card-text">
+                <h3 class="employee-card-title">Ольга Рєпіна</h3>
+                <span class="employee-card-text">Frontend Developer</span>
+              </div>
             </li>
             <li class="item">
               <img
@@ -124,8 +128,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="employee-title">Микола Тарасов</h3>
-              <span class="employee-text">Marketing</span>
+              <div class="card-text">
+                <h3 class="employee-card-title">Микола Тарасов</h3>
+                <span class="employee-card-text">Marketing</span>
+              </div>
             </li>
             <li class="item">
               <img
@@ -134,8 +140,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="employee-title">Михайло Єрмаков</h3>
-              <span class="employee-text">UI Designe</span>
+              <div class="card-text">
+                <h3 class="employee-card-title">Михайло Єрмаков</h3>
+                <span class="employee-card-text">UI Designe</span>
+              </div>
             </li>
           </ul>
         </div>
@@ -146,10 +154,12 @@
         <a class="logo bottom-logo" href="./index.html"
           ><span class="logo-cover">Web</span>Studio</a
         >
-        <address class="bottom-text">м. Київ, пр-т Лесі Українки, 26</address>
+        <address class="bottom-text"><span class="bottom-span">м. Київ, пр-т Лесі Українки, 26</span></address>
         <address>
-          <a class="link bottom-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <ul>
+          <span class="bottom-span"><a class="link bottom-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></span>
           <a class="link bottom-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+          </ul>
         </address>
       </div>
     </footer>
