--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
         <nav>
           <ul class="list list-nav">
             <li class="item">
-              <a class="link navigation-link this-page" href="./index.html">Студія</a>
+              <a class="link navigation-link" href="./index.html">Студія</a>
             </li>
             <li class="item">
-              <a class="link navigation-link" href="./portfolio.html">Портфоліо</a>
+              <a class="link navigation-link this-page" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="item">
               <a class="link navigation-link" href="#">Контакти</a>
@@ -48,7 +48,7 @@
       <section class="product-section">
         <div class="container">
           <h1 class="visually-hidden">Портфоліо Web Studio</h1>
-          <ul class="list">
+          <ul class="list list-botton">
             <li><button class="button" type="button">Усі</button></li>
             <li><button class="button" type="button">Веб-сайти</button></li>
             <li><button class="button" type="button">Додатки</button></li>
@@ -56,7 +56,7 @@
             <li><button class="button" type="button">Маркетинг</button></li>
           </ul>
           <ul class="list product-card">
-            <li>
+            <li class="item">
               <a class="product-link" href="">
                 <img
                   src="./images/8.jpg"
@@ -68,7 +68,7 @@
                 <span class="product-text">Веб-сайт</span>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a class="product-link" href="">
                 <img
                   src="./images/9.jpg"
@@ -80,7 +80,7 @@
                 <span class="product-text">Дизайн</span>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a class="product-link" href="">
                 <img
                   src="./images/10.jpg"
@@ -92,7 +92,7 @@
                 <span class="product-text">Додаток</span>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a class="product-link" href="">
                 <img
                   src="./images/11.jpg"
@@ -104,14 +104,14 @@
                 <span class="product-text">Маркетинг</span>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a class="product-link" href="">
                 <img src="./images/12.jpg" alt="Напис Lab el tag" width="370" height="294" />
                 <h2 class="product-title">Проєкт Boxes</h2>
                 <span class="product-text">Додаток</span>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a class="product-link" href="">
                 <img
                   src="./images/13.jpg"
@@ -123,7 +123,7 @@
                 <span class="product-text">Веб-сайт</span>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a class="product-link" href="">
                 <img
                   src="./images/14.jpg"
@@ -135,14 +135,14 @@
                 <span class="product-text">Дизайн</span>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a class="product-link" href="">
                 <img src="./images/15.jpg" alt="Книжка на білому тлі" width="370" height="294" />
                 <h2 class="product-title">Проєкт LAB</h2>
                 <span class="product-text">Маркетинг</span>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a class="product-link" href="">
                 <img
                   src="./images/16.jpg"
