--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
   <body>
     <header>
       <div class="container flex-header">
-        <a class="logo" href="./index.html"><span class="logo-cover">Web</span>Studio</a>
-        <nav>
+        <nav class="flex-nav">
+          <a class="logo" href="./index.html"><span class="logo-cover">Web</span>Studio</a>
           <ul class="list list-nav">
             <li class="item">
               <a class="link navigation-link" href="./index.html">Студія</a>
@@ -49,11 +49,11 @@
         <div class="container">
           <h1 class="visually-hidden">Портфоліо Web Studio</h1>
           <ul class="list list-botton">
-            <li><button class="button" type="button">Усі</button></li>
-            <li><button class="button" type="button">Веб-сайти</button></li>
-            <li><button class="button" type="button">Додатки</button></li>
-            <li><button class="button" type="button">Дизайн</button></li>
-            <li><button class="button" type="button">Маркетинг</button></li>
+            <li class="item"><button class="button" type="button">Усі</button></li>
+            <li class="item"><button class="button" type="button">Веб-сайти</button></li>
+            <li class="item"><button class="button" type="button">Додатки</button></li>
+            <li class="item"><button class="button" type="button">Дизайн</button></li>
+            <li class="item"><button class="button" type="button">Маркетинг</button></li>
           </ul>
           <ul class="list product-card">
             <li class="item">
