--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <header>
       <div class="container flex-header">
-        <a class="logo" href="./index.html"><span class="logo-cover">Web</span>Studio</a>
-        <nav>
+        <nav class="flex-nav">
+          <a class="logo" href="./index.html"><span class="logo-cover">Web</span>Studio</a>
           <ul class="list list-nav">
             <li class="item">
               <a class="link navigation-link this-page" href="./index.html">Студія</a>
